<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffffff"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/backgroud">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@mipmap/icon_x"
            android:padding="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="配置打印机"
            android:gravity="center"
            android:textColor="@color/md_black_1000"
            android:textSize="22dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        >

        <RadioGroup
            android:id="@+id/rgPort"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/rbEthernet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/ethernet"
                android:layout_weight="1"
                android:button="@null"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:checked="true"
                android:background="@drawable/radio_checked">
            </RadioButton>

            <RadioButton
                android:id="@+id/rbUsb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/usb"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:background="@drawable/radio_checked">
            </RadioButton>



            <RadioButton
                android:id="@+id/rbBluetooth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="false"
                android:textSize="15sp"
                android:textColor="@color/md_black_1000"
                android:text="@string/bluetooth"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:background="@drawable/radio_checked">
            </RadioButton>
        </RadioGroup>


    </LinearLayout>

    <include layout="@layout/dialog_bluetooth_list" android:visibility="gone"/>
    <TextView
        android:id="@+id/tvUsb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="待开发中"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:paddingTop="10dp"
        android:textColor="@color/md_blue_grey_500"
        android:textSize="22dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:layout_marginTop="20dp">

        <!--&lt;!&ndash;<RadioGroup-->
            <!--android:id="@+id/rgPort"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingLeft="10sp"-->
            <!--android:paddingRight="10sp"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--&gt;-->
            <!--<RadioButton&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/rbBluetooth"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:checked="true"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textSize="15sp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textColor="@color/white"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/bluetooth" >&ndash;&gt;-->
            <!--&lt;!&ndash;</RadioButton>&ndash;&gt;-->

            <!--&lt;!&ndash;<RadioButton&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/rbUsb"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textSize="15sp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textColor="@color/white"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/usb" >&ndash;&gt;-->
            <!--&lt;!&ndash;</RadioButton>&ndash;&gt;-->

            <!--&lt;!&ndash;<RadioButton&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/rbEthernet"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textSize="15sp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:textColor="@color/white"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/ethernet" >&ndash;&gt;-->
            <!--&lt;!&ndash;</RadioButton>&ndash;&gt;-->
        <!--&lt;!&ndash;</RadioGroup>&ndash;&gt;-->
        <TextView
            android:id="@+id/tvPortInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:singleLine="false"
            android:textSize="15sp"
            android:paddingLeft="15sp"
            android:textColor="@color/md_black_1000"
            />

        <LinearLayout
            android:id="@+id/llEthernet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_address"
                android:textColor="@color/md_black_1000"
                android:padding="0sp"/>
            <EditText
                android:id="@+id/etIpAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_ip_address"
                android:background="@drawable/edittext_style"
                android:textColor="@color/md_black_1000"
                android:hint=""/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port_number"
                android:textColor="@color/md_black_1000"/>
            <EditText
                android:id="@+id/etPortNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/md_black_1000"
                android:background="@drawable/edittext_style"
                android:text="@string/default_port_number"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btCancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:visibility="visible"
                android:textColor="@color/md_black_1000"
                android:background="@drawable/button_frame_bk"
                android:text="取消"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btOk"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15sp"
                android:visibility="visible"
                android:textColor="@color/md_black_1000"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_circular_yj"
                android:text="@string/ok"
                android:onClick="okButtonClicked"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
